--- a/index.html
+++ b/index.html
@@ -281,6 +281,30 @@
         </div>
     </div>
 
+    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="portfolio-links">
+            <!-- <a href="assets/img/portfolio/portfolio-1.jpg" class="portfolio-lightbox"></a> -->
+            <a href="https://solaroutputprediction.herokuapp.com/" title="More Details"><i class="bx bx-link"></i></a> 
+          </div>
+
+        </div>
+
+        <ul>
+          <br>
+          <li>Developed ML model based on set of weather features to aid users for solar Power forecasting at any
+            particular location in making practical design decisions </li>
+          <li>Developed User interface to input desired location on the map and use API to fetch weather features to
+            perform predictions</li>        
+        </ul>
+        <br>
+      </div>
+
+    
+
         
     <!--
     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
